WIP developing front end.  Adding buttons to homepage

--- a/Bakery/Views/Home/Index.cshtml
+++ b/Bakery/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
   Layout = "_Layout";
 }
 
-<h1>Welcome to the To Do List!</h1>
+<h1>Welcome to Pierres Sweet and Savory Treats Bakery!</h1>
 <p>@Html.ActionLink("See all items", "Index", "Items")</p> <p>@Html.ActionLink("See all categories", "Index", "Categories")</p>
 <p>@Html.ActionLink("Create an account", "Index", "Account")</p>
+
+Be right back as well.
