Added Carousel images and custom styling to homepage

--- a/Bakery/Views/Shared/_Layout.cshtml
+++ b/Bakery/Views/Shared/_Layout.cshtml
@@ -4,29 +4,33 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Bakery</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/home.css" />
+    <link rel="stylesheet" href="~/css/custombutton.css" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-            <div class="home__header-content"
-               <span>@Html.ActionLink("Pierres Treats", "Index", "Home")</span>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <span>@Html.ActionLink("Flavours", "Index", "Flavours")</span>
-                        </li>
-                        <li class="nav-item">
-                            <span>@Html.ActionLink("Treats", "Index", "Treats")</span>
-                        </li>
-                    </ul>
+                <div class="home__header-content">
+                <span>@Html.ActionLink("Pierres Treats", "Index", "Home")</span>
+                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                        <ul class=" home__links">
+                            <li class="nav-item">
+                                <span>@Html.ActionLink("Flavours", "Index", "Flavours")</span>
+                            </li>
+                            <li class="nav-item">
+                                <span>@Html.ActionLink("Treats", "Index", "Treats")</span>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div>
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -34,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - Bakery - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - Pierres Bakery - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
