--- a/Bakery/Views/Home/Index.cshtml
+++ b/Bakery/Views/Home/Index.cshtml
@@ -2,8 +2,56 @@
   Layout = "_Layout";
 }
 
-<h1>Welcome to Pierres Sweet and Savory Treats Bakery!</h1>
-<p>@Html.ActionLink("See all items", "Index", "Items")</p> <p>@Html.ActionLink("See all categories", "Index", "Categories")</p>
-<p>@Html.ActionLink("Create an account", "Index", "Account")</p>
+<div class="home__background">
+  <h1>Welcome to Pierres Sweet and Savory Treats Bakery!</h1>
+  <div class="home__layout">
+    <div class="w-50 home__carousel">
+      <div id="carouselExampleCaptions" class="carousel slide w-75" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../img/cheesecake.jpg" class="d-block home__img" alt="Cheesecake">
+            <div class="carousel-caption d-none d-md-block dark-gray">
+              <h5>Multi Berry Cheesecake</h5>
+              <p>Our famous Cheesecake with berries from the Willamette Valley!</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../img/cinamonroll.jpg" class="d-block home__img" alt="CinamonRoll">
+            <div class="carousel-caption d-none d-md-block dark-gray">
+              <h5>Cinamon Rolls</h5>
+              <p>Our delicious cinamon rolls are baked daily and are free with every coffee purchase.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../img/macrons.jpg" class="d-block home__img" alt="Macrons">
+            <div class="carousel-caption d-none d-md-block dark-gray">
+              <h5>Multi flavoured Macrons</h5>
+              <p>Our World famous Macrons won the best in North America for 2022.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon dark-gray" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon dark-gray" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+    <div class="home__buttons">
+      <button class="button-56">@Html.ActionLink("Flavours", "Index", "Flavours")</button> 
+      <button class="button-56">@Html.ActionLink("Treats", "Index", "Treats")</button>
+      <button class="button-56">@Html.ActionLink("Create an account", "Index", "Account")</button>
+    </div>
+  </div>
+</div>
 
-Be right back as well.
+
+
