Successfully built treat views and fixed minor spelling errors.

--- a/Bakery/Views/Flavours/AddTreat.cshtml
+++ b/Bakery/Views/Flavours/AddTreat.cshtml
@@ -4,8 +4,8 @@
 
 @model Bakery.Models.Flavour
 
-  <h3>Attatch a Treat to @Html.DisplayFor(model => model.Name)</h3>
-  <h4>To attach fill out form and save below:</h4>
+  <h3>Attach a Treat to @Html.DisplayFor(model => model.Name)</h3>
+  <h4>To attach fill out the form and save below:</h4>
 
   <hr/>
 
