--- a/Bakery/Views/Flavours/Delete.cshtml
+++ b/Bakery/Views/Flavours/Delete.cshtml
@@ -7,8 +7,9 @@
 <h2>Are you sure you want to delete this?</h2>
 
 @Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)
+<hr/>
 @using (Html.BeginForm())
 {
   <input type="submit" value="Delete" />
 }
-@Html.ActionLink("Back to Flavours", "Index")
+@Html.ActionLink("Back to Treats", "Index")
